# openapi-spec-forge

./: .gitignore  README  README.md  package-lock.json  package.json  pyproject.toml
src/: __init__.py  builder.py  grouper.py  parser.py  renderer.py  resolver.py
template/: app.js  index.html  style.css
