[project]
name = "openapi-spec-builder"
version = "0.1.0"
description = "Generate fast, static API docs from your OpenAPI spec. Zero dependencies."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Azeem Mirza", email = "azeem.mirza94@gmail.com" }]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
